h1 single aligne texte centre et aos fix gauche-droite anim

--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -302,6 +302,11 @@
       text-align: center;
     }
   }
+  .projet-section {
+    h1 {
+      text-align: center;
+    }
+  }
 }
 
 @media screen and (max-width: $vw-mobile) {
